# multiplayer-strategy

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/: cli.py
src/games/: __init__.py  blotto.py  prisoners_dilemma.py  public_goods.py
src/strategies/: pd_strategies.py
src/tournament/: runner.py
src/viz/: app.py
tests/: test_blotto.py  test_pd_tournament.py  test_public_goods.py  test_strategies.py
